--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tailwindcss -i ./src/styles/input.css -o ./src/styles/style.css",
+    "dev": "tailwindcss -i ./src/styles/input.css -o ./src/styles/style.css --watch"
   },
   "keywords": [],
   "author": "",
